# gzkeyboard

./: .gitignore  CLAUDE.md  README.md  gzkeyboard.html  gzkeyboard.html.md  index.html  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
gzkeyboard/: __main__.py  _modidx.py  composition.py  config.py  core.py  enums.py  gui.py  gzkeyboard.py  main.py  system.py
nbs/: 00_core.ipynb  00_gzkeyboard.ipynb  01_composition.ipynb  02_system_integration.ipynb  03_configuration.ipynb  04_main.ipynb  05_gui.ipynb  _quarto.yml  index.ipynb  nbdev.yml  sidebar.yml  sys_path_fix.py
